<resources>
    <string name="app_name">Where is my money</string>
    <string name="new_transaction">New</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="cost">Cost</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="category_color">Category color</string>
    <string name="category_name">Category Name</string>
    <string name="spent">$ Spent</string>
    <string name="zero">$0.00</string>
    <string name="spending_stats">Spending Stats</string>
    <string name="todayDate">Today\'s</string>
    <string name="note">Note</string>
</resources>
