<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".new_transaction.ui.NewTransactionFragment">

    <com.github.anastr.speedviewlib.SpeedView
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sv_withTremble="false"
            app:sv_speedometerMode="TOP"
            app:sv_lowSpeedPercent="25"
            app:sv_mediumSpeedPercent="100"
            app:sv_lowSpeedColor="#ff5500"
            app:sv_unit=""
            app:sv_mediumSpeedColor="#90EE90"
            android:id="@+id/goalStatus"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginBottom="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent=".25"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_check_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/addFavButton"
            app:backgroundTint="@color/design_default_color_primary_dark"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateEditText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cost"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/zero"
            android:digits="0123456789."
            android:ems="10"
            android:id="@+id/costEditText"
            android:selectAllOnFocus="false"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/titleCheckBox"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateEditText"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="@+id/categorySpinner"
            app:layout_constraintEnd_toEndOf="@+id/categorySpinner"/>

    <CheckBox
            android:text="@string/today"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todayCheckBox"
            app:layout_constraintBottom_toBottomOf="@+id/titleCheckBox"
            app:layout_constraintStart_toStartOf="@+id/costEditText"/>

    <Spinner
            android:layout_width="212dp"
            android:layout_height="46dp"
            android:id="@+id/categorySpinner"
            android:prompt="@string/category"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/costEditText"
            app:layout_constraintEnd_toEndOf="@+id/costEditText"
            app:layout_constraintStart_toStartOf="@+id/costEditText"/>
    <CheckBox
            android:text="@string/untitled"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleCheckBox"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/costEditText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:inputType="text"
            android:hint="@string/title"
            android:text="@string/untitled"
            android:ems="10"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
            android:id="@+id/titleEditText"
            app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
            app:layout_constraintStart_toStartOf="@+id/categorySpinner"
            app:layout_constraintHorizontal_bias="0.0"
            android:importantForAutofill="no"/>
</androidx.constraintlayout.widget.ConstraintLayout>