<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/cardView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/category_color"
                android:src="@drawable/full_circle"
                android:id="@+id/categoryColor"
                android:layout_marginTop="8dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:id="@+id/totalSpent"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/spent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <TextView
                android:id="@+id/categoryName"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/category_name"
                app:layout_constraintTop_toTopOf="@+id/totalSpent"
                app:layout_constraintBottom_toBottomOf="@+id/totalSpent"
                app:layout_constraintStart_toEndOf="@+id/categoryColor" android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>